--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.1.1",
     "bootstrap": "^4.5.2",
+    "cocoon-rails": "^1.2.6",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "toastr": "^2.1.4",
