--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,7 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-/db/*.sqlite3-*
+/doc
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -18,24 +15,83 @@
 !/log/.keep
 !/tmp/.keep
 
-# Ignore pidfiles, but keep the directory.
-/tmp/pids/*
-!/tmp/pids/
-!/tmp/pids/.keep
-
-# Ignore uploaded files in development.
+# Ignore uploaded files in development
 /storage/*
-!/storage/.keep
 
-/public/assets
-.byebug_history
+.sass-cache/
 
-# Ignore master key for decrypting credentials and more.
+/yarn-error.log*
+
+# Ignore test reports
+/brakeman-output.*
+/coverage
+/test/reports/
+/capybara-*.html
+
+# Ignore results of `rake assets:precompile`.
+/public/assets/
+
+# Never check passwords into source control!
+/config/database.yml
 /config/master.key
 
+/public/uploads/
+*.rdb
+dump.sql
+latest.dump
+dump*
 /public/packs
 /public/packs-test
-/node_modules
-/yarn-error.log
-yarn-debug.log*
 .yarn-integrity
+
+*.DS_Store
+
+*.rbc
+.rspec
+/log
+/tmp
+/db/*.sqlite3
+/db/*.sqlite3-journal
+/public/system
+/spec/tmp
+*.orig
+rerun.txt
+pickle-email-*.html
+
+# TODO Comment out this rule if you are OK with secrets being uploaded to the repo
+config/initializers/secret_token.rb
+config/master.key
+
+# Only include if you have production secrets in this file, which is no longer a Rails default
+# config/secrets.yml
+
+# dotenv
+# TODO Comment out this rule if environment variables can be committed
+.env
+
+## Environment normalization:
+/.bundle
+/vendor/bundle
+
+# these should all be checked in to normalize the environment:
+# Gemfile.lock, .ruby-version, .ruby-gemset
+
+# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
+.rvmrc
+
+.rbenv-vars
+
+# if using bower-rails ignore default bower_components path bower.json files
+/vendor/assets/bower_components
+*.bowerrc
+bower.json
+
+# Ignore pow environment settings
+.powenv
+
+# Ignore Byebug command history file.
+.byebug_history
+
+# Ignore node_modules
+node_modules/
+docker-compose.yml
